@@ -22,6 +22,6 @@ dependencies {
 }
 
 application {
-    applicationDefaultJvmArgs = ["-Xmx512m", "-XX:MaxPermSize=128m"]
+    applicationDefaultJvmArgs = ["-Dserver.port=$PORT"]
     mainClass = 'ru.maxbach.pocketbot.MainKt'
 }
